UKM: Add PageLoad::IsSignedExchangeInnerResponse

Bug: 923213
Change-Id: Ie7a311b3aef623d0cd5a0aa9dd5f9da0a94444d5
Reviewed-on: https://chromium-review.googlesource.com/c/1420498
Commit-Queue: Kouhei Ueno <kouhei@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Bryan McQuade <bmcquade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#634563}
Former-commit-id: 963762c4bb73aeabf56eabbb191dbda60659b9ee